Fix "Only resources can modify remote identifiers" when re-editing event

Summary:
... before the resource had time to create it and notify korganizer
about it.

This seems to be a better fix than akonadi commit fbcd065c0dbb,
which for some reason isn't enough (I had the error again in January
2020).

BUG: 407965

Test Plan:
Create event in korganizer, double-click it immediately,
change something, click OK.

Reviewers: dvratil

Reviewed By: dvratil

Differential Revision: https://phabricator.kde.org/D28559